# educoder-cli

./: .gitignore  LICENSE  README.md  api.py  auth.py  cli.py  educoder_auto.py  main.py  pyproject.toml  requirements.txt  test1.sql  test2.sql
.claude/: settings.json
skills/educoder-cli/: SKILL.md
skills/educoder-cli/references/: educoder-cli.md
src/educoder_cli/: cli.py  client.py  credentials.py  models.py
