[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "educoder-cli"
version = "1.0.0"
description = "头歌 / Educoder API CLI — 课堂列表、实验列表、代码提交与自动评测"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.scripts]
educoder = "educoder_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/educoder_cli"]
